adding-html-css-mobile-tab

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,22 @@
 <header class="header">
   <div class="container">
-    <svg class="header-logo" width="123" height="16">
+    <div class="header-additional">
+     <div class="header-mobile">
+        <svg class="header-logo" width="123" height="16">
       <use href="/img/icons.svg#icon-logo"></use>
     </svg>
+    <div class="header-nav-mobile">
+     <svg class="header-camera-icon" width="16" height="16">
+      <use href="/img/icons.svg#icon-camera"></use>
+    </svg> 
+    <svg class="header-nav-icon" width="32" height="22">
+      <use href="/img/icons.svg#icon-burger"></use>
+    </svg>  
+    </div>
+  </div>
+    <button type="button" class="header-button">Sign up</button>
+  </div>
+  
+  
   </div>
 </header>
