--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,3 +1,74 @@
+.header-additional {
+  padding: 20px 0;
+}
+
+.header-mobile {
+  padding: 8px 20px;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.20);
+  background: var(--black, #121212);
+  width: 100%;
+}
+
 .header-logo {
   fill: var(--c-brand);
+}
+.header-nav-mobile {
+  display: flex;
+  gap: 14px;
+  align-items: center;
+  justify-content: center;
+}
+
+.header-camera-icon {
+  fill: #BEA69E66;
+  width: 32px;
+  height: 32px;
+  padding: 8px;
+  border-radius: 50%;
+  background-color:#1D1D1D;
+}
+
+.header-nav-icon {
+  fill: var(--c-brand);
+}
+
+@media screen and (max-width: 767px) {
+
+  .header-button {
+    display: none;
+  }
+  
+}
+
+@media screen and (min-width: 768px) {
+
+  .header-camera-icon {
+    display: none;
+  }
+
+  .header-button {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 28px; /* 155.556% */
+    background-color: #FFF;
+    color: #121212;
+    cursor: pointer;
+    min-width: 186px;
+    height: 60px;
+    display: block;
+    margin: 0 auto;
+    border: none;
+    border-radius: 12px;
+    text-transform: uppercase;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-additional {
+  display: flex;
+  gap: 14px;
+
+}
 }
