--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,6 +5,13 @@
         <svg class="header-logo" width="123" height="16">
       <use href="/img/icons.svg#icon-logo"></use>
     </svg>
+    <ul class="header-nav-list">
+      <li><a href="" class="header-nav-link">About us</a></li>
+      <li><a href="" class="header-nav-link">Our courses</a></li>
+      <li><a href="" class="header-nav-link">Our mentors</a></li>
+      <li><a href="" class="header-nav-link">Reviews</a></li>
+      <li><a href="" class="header-nav-link">Contacts</a></li>
+    </ul>
     <div class="header-nav-mobile">
      <svg class="header-camera-icon" width="16" height="16">
       <use href="/img/icons.svg#icon-camera"></use>
