adding-4-sections-link

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,10 +6,10 @@
       <use href="/img/icons.svg#icon-logo"></use>
     </svg>
     <ul class="header-nav-list">
-      <li><a href="" class="header-nav-link">About us</a></li>
-      <li><a href="" class="header-nav-link">Our courses</a></li>
-      <li><a href="" class="header-nav-link">Our mentors</a></li>
-      <li><a href="" class="header-nav-link">Reviews</a></li>
+      <li><a href="about-us" class="header-nav-link">About us</a></li>
+      <li><a href="our-courses" class="header-nav-link">Our courses</a></li>
+      <li><a href="our-mentors" class="header-nav-link">Our mentors</a></li>
+      <li><a href="reviews" class="header-nav-link">Reviews</a></li>
       <li><a href="" class="header-nav-link">Contacts</a></li>
     </ul>
     <div class="header-nav-mobile">
@@ -23,7 +23,5 @@
   </div>
     <button type="button" class="header-button">Sign up</button>
   </div>
-  
-  
   </div>
 </header>
