--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -99,3 +99,9 @@ section {
     padding-right: 100px;
   }
 }
+
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
+  }
+}
