--- a/src/css/sections/section-our-courses.css
+++ b/src/css/sections/section-our-courses.css
@@ -1,5 +1,4 @@
 .courses-name {
-  font-family: DM Sans;
   font-size: 28px;
   font-weight: 500;
   line-height: 1.14;
@@ -34,7 +33,8 @@
   border: 1px solid rgba(255, 255, 255, 0.2);
   background: var(--c-gradient);
   position: relative;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .courses-li:not(:last-child) {
   margin-bottom: 20px;
@@ -49,7 +49,7 @@
   position: absolute;
   top: 28px;
   right: 28px;
-  background-color: #1d1d1d;
+  background-color: var(--c-background-light);
   border-radius: 50%;
   width: 32px;
   height: 32px;
@@ -58,22 +58,24 @@
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.courses-link:hover {
-  background-color: var(--c-primary);
-}
+
+.courses-link:hover,
 .courses-link:focus {
   background-color: var(--c-primary);
 }
+
 .courses-svg {
   width: 20px;
   height: 20px;
-  stroke: rgba(119, 119, 119, 1);
+  stroke: rgba(255, 255, 255, 0.4);
   transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .courses-link:hover .courses-svg,
 .courses-link:focus .courses-svg {
-  stroke: rgba(255, 255, 255, 1);
+  stroke: var(--c-brand);
 }
+
 .courses-link-name {
   font-size: 28px;
   font-weight: 500;
@@ -81,6 +83,7 @@
   margin-top: 42px;
   margin-bottom: 164px;
 }
+
 .courses-link-text {
   color: rgba(255, 255, 255, 0.5);
   font-size: 14px;
@@ -88,20 +91,24 @@
   letter-spacing: -0.02em;
   flex-shrink: 0;
 }
+
 /* ===========
     MEDIA
 =========== */
+
 @media screen and (min-width: 768px) {
   .courses-wrap {
     display: flex;
     justify-content: space-between;
     margin-bottom: 50px;
   }
+
   .courses-name {
     font-size: 48px;
     line-height: 1.12;
     letter-spacing: 0.01em;
   }
+
   .courses-text {
     max-width: 381px;
     width: 100%;
@@ -109,6 +116,7 @@
     line-height: 1.25;
     margin-bottom: 0;
   }
+
   .courses-list {
     display: flex;
     flex-wrap: wrap;
@@ -116,37 +124,46 @@
     row-gap: 20px;
     margin: 0;
   }
+
   .courses-li {
     padding: 32px;
     width: calc((100% - 20px) / 2);
   }
+
   .courses-li:not(:last-child) {
     margin-bottom: 0;
   }
+
   .courses-link {
     top: 32px;
     right: 32px;
   }
+
   .courses-link-name {
     margin-top: 46px;
     margin-bottom: 180px;
   }
+
   .courses-link-text {
     font-size: 16px;
     line-height: 1.25;
   }
 }
+
 @media screen and (min-width: 1280px) {
   .courses-text {
     max-width: 405px;
     width: 100%;
   }
+
   .courses-li {
     width: calc((100% - 40px) / 3);
   }
+
   .courses-link-name {
     margin-bottom: 180px;
   }
+
   .courses-link-text {
     letter-spacing: -0.03em;
   }
