--- a/src/css/sections/section-sing-up.css
+++ b/src/css/sections/section-sing-up.css
@@ -1,14 +1,13 @@
-/* MOBILE */
 .sign-up-title {
   color: var(--c-brand);
   font-size: 28px;
-  font-style: normal;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: -1.12px;
   margin-bottom: 20px;
   text-align: left;
 }
+
 .title-up {
   color: var(--c-primary);
 }
@@ -16,9 +15,10 @@
 .field-block {
   padding-bottom: 8px;
 }
+
 .sign-up-text {
   font-size: 14px;
-  line-height: 18px;
+  line-height: 1.29;
   letter-spacing: -0.28px;
   padding-right: 40px;
   padding-bottom: 41px;
@@ -26,25 +26,33 @@
 
 .sign-up-field {
   font-size: 14px;
+  line-height: 1.29;
   width: 100%;
   height: 46px;
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 12px;
   padding-left: 18px;
   outline: transparent;
+  color: var(--c-brand);
   background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.sign-up-field:focus {
+  border-color: var(--c-brand);
+}
+
 .textarea-block {
   padding-bottom: 40px;
 }
+
 .sign-up-textarea {
   width: 100%;
   height: 112px;
   font-size: 14px;
-  line-height: 1.18;
+  line-height: 1.29;
   letter-spacing: 0.04em;
-  color: rgba(46, 47, 66, 0.4);
+  color: var(--c-brand);
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 12px;
   background-color: transparent;
@@ -53,6 +61,11 @@
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.sign-up-textarea:focus {
+  border-color: var(--c-brand);
+}
+
 .sign-up-button {
   width: 100%;
   height: 48px;
@@ -61,41 +74,52 @@
   line-height: 20px;
   font-weight: 700;
   margin-bottom: 20px;
+  text-transform: uppercase;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .sign-up-button:hover,
 .sign-up-button:focus {
   background-color: var(--c-background-light);
   color: var(--c-primary);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .privacy-text {
   color: rgba(255, 255, 255, 0.5);
   font-size: 12px;
   line-height: 1.33;
   text-align: left;
 }
+
 .privacy-link {
   text-decoration: underline;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.privacy-link:hover {
+  color: var(--c-brand);
+  text-decoration: underline;
+}
+
 .picture-block {
   display: none;
 }
-/* TABLET */
+
+/* Media */
+
+/* Tablet */
 @media (min-width: 768px) {
-  .sign-up {
-    min-width: 768px;
-    width: 768px;
-  }
   .field-container {
     max-width: 480px;
   }
-  .field-block {
-  }
+
   .sign-up-title {
     font-size: 48px;
     line-height: 1.12;
-    letter-spacing: -0em;
+    letter-spacing: 0;
   }
+
   .sign-up-text {
     font-size: 16px;
     line-height: 1.25;
@@ -103,117 +127,107 @@
     padding-right: 0;
     padding-bottom: 40px;
   }
+
   .sign-up-field {
     font-size: 16px;
-    width: 100%;
     height: 60px;
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    border-radius: 12px;
-    padding-left: 18px;
-    outline: transparent;
-    background-color: transparent;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+
   .sign-up-textarea {
-    width: 100%;
     height: 119px;
     font-size: 16px;
     line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: rgba(46, 47, 66, 0.4);
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    border-radius: 12px;
-    background-color: transparent;
     padding: 20px 18px;
-    outline: transparent;
-    resize: none;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .sign-up-button {
     height: 60px;
     font-size: 18px;
-    font-weight: 700;
     line-height: 1.55;
-    text-transform: uppercase;
     margin-bottom: 20.71px;
   }
   .privacy-text {
-    font-size: 14px;
     line-height: 1.28;
   }
 }
+
 /* DESKTOP */
+
 @media (min-width: 1280px) {
   .sign-up {
     gap: 60px;
-    min-width: 1280px;
     display: flex;
     align-items: center;
   }
+
   .privacy-text {
-    font-size: 14px;
-    line-height: 1.28;
     letter-spacing: -0.02em;
   }
+
   .field-container {
     max-width: 480px;
   }
+
   .picture-list {
     display: flex;
     gap: 20px;
     align-items: flex-end;
   }
+
   .picture-block {
     display: block;
     max-width: 540px;
     margin-bottom: 38px;
   }
-  .signup-lens {
+
+  .sign-up-lens {
     background-color: var(--c-primary);
     border-radius: 1000px;
     width: 180px;
     height: 288px;
     position: relative;
   }
+
+  .sign-up-lens:hover {
+    animation: shake 2s ease-in-out infinite;
+  }
+
+  @keyframes shake {
+    0% {
+      transform: translateX(0);
+    }
+    25% {
+      transform: translateX(-5px);
+    }
+    50% {
+      transform: translateX(5px);
+    }
+    75% {
+      transform: translateX(-5px);
+    }
+    100% {
+      transform: translateX(5px);
+    }
+  }
+
   .lens-img {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-65%, -40%);
-    max-width: 100%;
-    max-height: 100%;
-    height: auto;
     transition: transform 0.5s ease-in-out;
   }
-  .signup-lens:hover {
-    animation: shake 1.9s ease-in-out infinite;
-  }
-  @keyframes shake {
-    0% {
-      transform: translateX(0);
-    }
-    25% {
-      transform: translateX(-5px);
-    }
-    50% {
-      transform: translateX(5px);
-    }
-    75% {
-      transform: translateX(-5px);
-    }
-    100% {
-      transform: translateX(5px);
-    }
-  }
-  .signup-nikon {
+
+  .sign-up-nikon {
     background-color: var(--c-background-light);
     border-radius: 1000px;
     width: 340px;
     height: 540px;
   }
-  .signup-nikon:hover {
-    animation: shake 1.9s ease-in-out infinite;
+
+  .sign-up-nikon:hover {
+    animation: shake 2s ease-in-out infinite;
   }
+
   @keyframes shake {
     0% {
       transform: translateX(0);
@@ -231,10 +245,14 @@
       transform: translateX(5px);
     }
   }
+
   .nikon-img {
-    margin-top: 139px;
-    margin-right: 48px;
-    margin-left: 48px;
-    margin-bottom: 88px;
+    margin: 139px 48px 88px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .sign-up {
+    gap: 200px;
   }
 }
