--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,25 @@
 .wrapper {
-  background-image: url(/img/background-img.webp);
-  background-position: center;
+  background-image: url(/img/background-img-mob.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* Media */
+
+@media (min-resolution: 192dpi) {
+  .wrapper {
+    background-image: url(/img/background-img-mob@2x.png);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .wrapper {
+    background-image: url(/img/background-img-tab.png);
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .wrapper {
+    background-image: url(/img/background-img-des.png);
+  }
 }
