Update Header,Reset,Hero,Sing Up

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,19 +8,19 @@
         <nav class="header-nav">
           <ul class="header-nav-up">
             <li class="header-nav-list">
-              <a href="#about-us"> about us </a>
+              <a href="#about-us">About us</a>
             </li>
             <li class="header-nav-list">
-              <a href="#our-courses"> our courses </a>
+              <a href="#our-courses">Our courses</a>
             </li>
             <li class="header-nav-list">
-              <a href="#our-mentors"> our mentors </a>
+              <a href="#our-mentors">Our mentors</a>
             </li>
             <li class="header-nav-list">
-              <a href="#reviews"> reviews </a>
+              <a href="#reviews">Reviews</a>
             </li>
             <li class="header-nav-list">
-              <a href="#contacts"> contacts </a>
+              <a href="#contacts">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -40,6 +40,7 @@
         </button>
       </div>
     </div>
-    <button class="header-button" type="button">sign up</button>
+    <!-- <button class="header-button" type="button">Sign up</button> -->
+    <a class="header-button" href="#our-sign-up">Sign up</a>
   </div>
 </header>
