--- a/src/css/header.css
+++ b/src/css/header.css
@@ -2,6 +2,7 @@
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
 .backdrop {
   background: rgba(18, 18, 18, 0.4);
   position: fixed;
@@ -28,13 +29,11 @@
   overflow-y: auto;
   padding-top: 180px;
 }
-.modal-camera {
-  margin-top: 133px;
-}
 
 .modal-camera {
   margin-top: 133px;
 }
+
 .header-modal-camera {
   width: 100%;
 }
@@ -42,15 +41,16 @@
 .header-nav-modal {
   padding-left: 20px;
 }
+
 .menu-close-button {
-  stroke: #121212;
   position: absolute;
   top: 20px;
   right: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: var(--c-primary);
+  background: inherit;
+}
+
+.modal-lose-icon {
+  stroke: var(--c-background);
 }
 
 .menu-content {
@@ -64,17 +64,12 @@
 }
 
 .header-nav-list-modal {
-  color: var(--c-background);
-  font-family: DM Sans;
   font-size: 14px;
   text-transform: uppercase;
 }
 
-.header-nav-list-modal:hover,
-.header-nav-list-modal:focus {
-  font-weight: 700;
-}
-.header-nav-list {
+.header-nav-list-modal a {
+  color: var(--c-background);
   transition: font-weight 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -82,30 +77,51 @@
   margin-bottom: 20px;
 }
 
-.header-nav,
-.header-button {
+.header-nav-list-modal:hover a,
+.header-nav-list-modal:focus a {
+  font-weight: 700;
+}
+
+.header-nav-list {
+  font-size: 14px;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+
+.header-nav-list a {
+  color: var(--c-brand);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    font-weight 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-nav-list:hover a,
+.header-nav-list:focus a {
+  color: var(--c-primary);
+  font-weight: 700;
+}
+
+.header-nav {
   display: none;
 }
 
-.modal-lose-icon {
-  width: 32px;
-  height: 32px;
-}
 .header-info {
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 50px;
-  flex-shrink: 0;
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.2);
   background: var(--c-background);
   padding-left: 20px;
   padding-right: 20px;
+  margin-bottom: 40px;
+  margin-right: 14px;
 }
+
 .header-nav-up-modal {
   padding-left: 20px;
 }
+
 .header-icon-logo {
   width: 127px;
   height: 20px;
@@ -124,13 +140,15 @@
   font-size: 18px;
   font-weight: 700;
   line-height: 1.56;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--c-background);
+  background-color: var(--c-brand);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-button:hover,
 .header-button:focus {
-  background-color: #121212;
+  background-color: var(--c-background-light);
   color: var(--c-primary);
 }
 
@@ -139,22 +157,17 @@
   margin-right: 22px;
   padding: 8px;
   border-radius: 50%;
-  width: 32px;
-  height: 32px;
   background-color: var(--c-background-light);
 }
 
 .header-icon-camera {
-  fill: var(--c-primary);
-}
-
-.header-icon-camera-a:hover,
-.header-icon-camera-a:focus {
-  fill: var(--c-primary);
-}
-
-.header-icon-camera-a {
+  fill: rgba(190, 166, 158, 0.4);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-icon-camera-container:hover .header-icon-camera,
+.header-icon-camera-container:focus .header-icon-camera {
+  fill: var(--c-primary);
 }
 
 .header-info-icon {
@@ -178,6 +191,7 @@
     display: flex;
     justify-content: space-between;
   }
+
   .modal-camera {
     margin-top: 114px;
   }
@@ -190,16 +204,14 @@
     width: 40px;
     height: 40px;
   }
+
   .modal {
     width: 480px;
+    padding-top: 232px;
   }
 
   .header-nav-modal {
     padding-left: 64px;
-  }
-
-  .modal {
-    padding-top: 232px;
   }
 
   .backdrop {
@@ -214,28 +226,17 @@
   .header-icon-camera {
     display: none;
   }
+
   .backdrop {
     width: 480px;
   }
 
   .header-info {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     height: 60px;
-    flex-shrink: 0;
-    border-radius: 12px;
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    background: var(--black, #121212);
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-bottom: 40px;
     flex-basis: 504px;
-    margin-right: 14px;
   }
-
   .header-button {
-    display: block;
+    display: flex;
   }
 }
 
@@ -246,12 +247,6 @@
   }
 
   .header-info {
-    display: flex;
-    align-items: center;
-    height: 60px;
-    border-radius: 12px;
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    background: var(--black, #121212);
     padding-left: 50px;
     padding-right: 50px;
     margin-bottom: 80px;
@@ -261,22 +256,6 @@
   .header-button {
     width: 238px;
     height: 60px;
-  }
-
-  .header-nav-list {
-    color: var(--c-brand);
-    font-family: DM Sans;
-    font-size: 14px;
-    text-transform: uppercase;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      font-weight 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    white-space: nowrap;
-  }
-
-  .header-nav-list :hover,
-  .header-nav-list :focus {
-    font-weight: 700;
-    color: var(--c-primary);
   }
 
   .header-nav {
@@ -294,5 +273,19 @@
   .header-nav-up {
     display: inline-flex;
     gap: 28px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .header-info {
+    flex-basis: 982px;
+  }
+
+  .header-nav {
+    margin-left: 209px;
+  }
+
+  .header-nav-up {
+    gap: 40px;
   }
 }
