--- a/src/css/sections/section-sing-up.css
+++ b/src/css/sections/section-sing-up.css
@@ -81,8 +81,8 @@
 
 .sign-up-button:hover,
 .sign-up-button:focus {
-  background-color: var(--c-background-light);
   color: var(--c-primary);
+  background-color: var(--c-background-light);
 }
 
 .privacy-text {
@@ -93,6 +93,7 @@
 }
 
 .privacy-link {
+  color: inherit;
   text-decoration: underline;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
