--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -2,59 +2,79 @@
   padding-top: 40px;
   padding-bottom: 20px;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
-  background-image: url(/img/background-img.webp);
-  background-position: top;
-  background-size: 499px 880px;
+  background-image: url(/img/background-img-mob.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
 .footer-logo-contact {
   margin-bottom: 40px;
 }
+
 .footer-logo {
   fill: var(--c-brand);
   margin-bottom: 16px;
 }
+
 .footer-contact {
   font-size: 14px;
-  font-style: normal;
   line-height: 1.28;
 }
-.footer-contact:hover,
-.footer-contact:focus {
+
+.footer-contact a {
+  color: var(--c-brand);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-style: normal;
+}
+
+.footer-contact:hover a,
+.footer-contact:focus a {
   color: var(--c-primary);
 }
+
 .footer-address-tel {
   margin-bottom: 10px;
 }
+
 .footer-social-sections {
   display: flex;
   gap: 40px;
   margin-bottom: 75px;
 }
+
 .footer-social {
   display: inline-flex;
   flex-direction: column;
   gap: 14px;
 }
+
 .footer-sections {
   display: flex;
   flex-direction: column;
   gap: 14px;
 }
+
 .footer-link {
   font-size: 14px;
-  line-height: normal;
   text-transform: uppercase;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-link:hover,
-.footer-link:focus {
+
+.footer-link a {
+  color: var(--c-brand);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-link:hover a,
+.footer-link:focus a {
   color: var(--c-primary);
 }
+
 .footer-form {
   display: flex;
   justify-content: space-between;
   margin-bottom: 40px;
 }
+
 .footer-input {
   padding: 20px 0 22px 18px;
   border-radius: 12px;
@@ -64,18 +84,26 @@
   outline: none;
   margin-right: 8px;
 }
+
 .footer-button {
+  color: var(--c-brand);
   background-color: var(--c-background-light);
   font-size: 20px;
-  color: var(--c-brand);
-  border-radius: 12px;
   width: 60px;
   height: 60px;
+  border-radius: 12px;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.footer-button:hover,
+.footer-button:focus {
+  transform: scale(1.05);
+}
+
 .footer-text-policy {
   font-size: 12px;
   line-height: 1.33;
@@ -85,37 +113,42 @@
   display: flex;
   justify-content: space-between;
 }
+
 .footer-text-policy-second {
   max-width: 116px;
 }
 
 @media only screen and (min-width: 768px) {
   .footer {
-    background-image: url(/img/background-img.webp);
-    background-position: top;
-    background-size: 768px 880px;
+    background-image: url(/img/background-img-tab.png);
     padding-top: 50px;
   }
+
   .footer-logo-contact,
   .footer-social-sections,
   .footer-form {
     margin-bottom: 0;
   }
+
   .footer-logo {
     margin-bottom: 23px;
   }
+
   .footer-logo-contact {
     margin-right: 58px;
     white-space: nowrap;
   }
+
   .footer-container-without-policy {
     display: flex;
     justify-content: space-between;
     margin-bottom: 75px;
   }
+
   .footer-input {
     max-width: 178px;
   }
+
   .footer-sections {
     min-width: 97px;
   }
@@ -123,6 +156,7 @@
     margin-right: 61px;
     gap: 25px;
   }
+
   .footer-wrapper-policy {
     font-size: 14px;
   }
@@ -130,39 +164,46 @@
   .footer-text-policy {
     font-size: 14px;
   }
+
   .footer-text-policy-second {
     max-width: 133px;
   }
 }
 @media only screen and (min-width: 1280px) {
   .footer {
-    background-image: url(/img/background-img.webp);
+    background-image: url(/img/background-img-des.png);
     background-position: top;
-    background-size: 1280px 796px; 
     padding-top: 46px;
   }
+
   .footer-logo-contact {
     margin-right: 0;
   }
+
   .footer-sections {
     margin-right: 0;
   }
+
   .footer-sections,
   .footer-social {
     gap: 20px;
   }
+
   .footer-social-sections {
     margin-left: 288px;
     margin-right: 135px;
     gap: 50px;
   }
+
   .footer-container-without-policy {
     justify-content: start;
     margin-bottom: 50px;
   }
+
   .footer-input {
     min-width: 216px;
-  } 
+  }
+
   .footer-form {
     width: 292px;
   }
