--- a/src/css/sections/section-sing-up.css
+++ b/src/css/sections/section-sing-up.css
@@ -38,6 +38,10 @@
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.sign-up-field::placeholder {
+  opacity: 0.7;
+}
+
 .sign-up-field:focus {
   border-color: var(--c-brand);
 }
@@ -60,6 +64,10 @@
   outline: transparent;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.sign-up-textarea::placeholder {
+  opacity: 0.7;
 }
 
 .sign-up-textarea:focus {
