--- a/src/css/sections/section-hero.css
+++ b/src/css/sections/section-hero.css
@@ -22,6 +22,20 @@
   letter-spacing: -0.005em;
 }
 
+.hero-header,
+.hero-text-info {
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fadeInAndSlide 1s ease-out forwards;
+}
+
+@keyframes fadeInAndSlide {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .hero-text-info {
   font-size: 14px;
   line-height: 1.28;
@@ -64,6 +78,14 @@
   z-index: 10;
 }
 
+.hero-students-img {
+  transition: transform 0.3s ease-out;
+}
+
+.hero-students-img:hover {
+  transform: scale(1.1);
+}
+
 .hero-students-text {
   font-size: 14px;
   line-height: 1.28;
@@ -71,12 +93,12 @@
   cursor: pointer;
   color: var(--c-brand);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} 
 
 .hero-students-text:hover,
 .hero-students-text:focus {
   color: var(--c-primary);
-}
+} 
 
 .hero-arrow-svg {
   fill: var(--c-brand);
@@ -111,6 +133,11 @@
   padding: 12px;
   width: 44px;
   height: 44px;
+    transition: transform 0.3s ease-out;
+}
+
+.hero-star-svg:hover {
+  transform: scale(1.1);
 }
 
 .hero-main-img {
